2014-07-13  David Lawrence Ramsey  <pooka109@gmail.com>
	* ChangeLog: Typo fix

2014-07-12  Benno Schulenberg  <bensberg@justemail.net>
	* configure.ac: The warning about datarootdir being ignored is
	not merely a warning, it also activates a workaround.

2014-07-11  Mark Majeres  <mark@engine12.com>
	* src/text.c (do_undo, do_redo): Do not speak of "line wrap"
	but instead of "text add" when undoing/redoing text additions
	that caused automatic line breaks.

2014-07-11  Benno Schulenberg  <bensberg@justemail.net>
	* src/files.c (write_lockfile): Refix typo in error message.

GNU nano 2.3.5 - 2014.07.11
2014-07-11  Chris Allegretta <chrisa@asty.org>
	* src/files.c (do_lockfile, open_file): If locking fails,
	allow the lock failure message to be preserved AND
	preserve the filename passed on the cmdline.  Fixes
	Savannah bug #42668.

2014-07-02  Chris Allegretta <chrisa@asty.org>
	* src/files.c (do_lockfile): Check whether the directory
	of the file we're trying to lock exists, and make the
	resulting error message more intuitive.  Fixes
	Savannah bug #42639 reported by Benno Schulenberg.

2014-07-02  Mark Majeres  <mark@engine12.com>
	* src/text.c (undo_cut, redo_cut, update_undo): Handle the
	cases of cutting-from-cursor-to-end-of-line correctly.
	* src/nano.c (do_input): Don't preserve the cutbuffer when
	CUT_TO_END is toggled -- it would intermix two cut types.
	* src/text.c (redo_cut, do_undo, do_redo): Don't forget to
	free the cutbuffer after use.

2014-07-02  Benno Schulenberg  <bensberg@justemail.net>
	* src/proto.h: Add a typedef for a pointer to a function.
	* src/global.c (func_from_key): New wrapper.
	* src/prompt.c (get_prompt_string, do_prompt): Use the new
	wrapper to make the code a bit cleaner.
	* src/help.c (do_help, parse_help_input): Use the wrapper.
	* src/browser.c (do_browser, parse_browser_input): Likewise.
	* src/search.c (search_init, do_gotolinecolumn): Likewise.
	* src/search.c (findnextstr): Replace a call of old wrapper